# pylide

./: .gitignore  .gitmodules  README.md  SETUP.md  SETUP.txt  create_wheel.py  custom_ops_hl.py  environment.yml  example_torch_ops.py  halide_pt_op.py  halide_python_steps.txt  listing.md  python_ops.py  requirements.txt  setup.py  shell.nix  sync_test.py  torch_ops.py  upfir.py  upfir_benchmark.py  upfir_ui.py  utilities.py
dnnlib/: util.py
pylide/: __init__.py  create_wheel.py  custom_ops_hl.py  halide_pt_op.py  upfir.py  utilities.py
pylide/torch_utils/: custom_ops.py  misc.py
pylide/torch_utils/mps/: .gitignore  MANIFEST.in  README.md  custom_add_test.py
pylide/torch_utils/ops/: grid_sample_gradfix.py  upfirdn2d.py
pylide/upfir_cpp/: CMakeLists.txt  bench.sh  upfir_generator.cpp  upfir_generator.py
torch_utils/: misc.py
torch_utils/mps/: build_torch.sh  setup.py
torch_utils/ops/: upfirdn2d.cpp  upfirdn2d.cu  upfirdn2d.h  upfirdn2d.py
upfir_cpp/: Makefile  runner.cpp
